--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,5 @@ pluginManagement {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
-rootProject.name = 'asoft-date'
+rootProject.name = 'asoft-persist'
 
