--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         kotlin_version = "1.3.20-eap-52"
     }
-    dependencies{
+    dependencies {
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
@@ -31,7 +31,7 @@ kotlin {
             }
         }
     }
-    
+
     js() {
         compilations.all {
             tasks[compileKotlinTaskName].kotlinOptions {
@@ -48,6 +48,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-common')
                 api project(":asoft-rx")
+                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.1.1'
             }
         }
         commonTest {
@@ -60,6 +61,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
                 api project(":asoft-rx")
+                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
             }
         }
         jvmTest {
@@ -72,6 +74,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-js')
                 api project(":asoft-rx")
+                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-js:1.1.1'
             }
         }
         jsTest {
