--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
     jcenter()
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     maven { url "https://kotlin.bintray.com/kotlinx" }
+    maven { url "https://jitpack.io" }
     mavenCentral()
 }
 
@@ -47,7 +48,7 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                api project(":asoft-rx")
+                api "com.github.andylamax:asoft-rx:1.0.0"
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.1.1'
             }
         }
@@ -60,7 +61,6 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
-                api project(":asoft-rx")
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
             }
         }
@@ -73,7 +73,6 @@ kotlin {
         jsMain {
             dependencies {
                 implementation kotlin('stdlib-js')
-                api project(":asoft-rx")
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-js:1.1.1'
             }
         }
