--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = "1.3.20-eap-52"
+        kotlin_version = "1.3.31"
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id 'kotlin-multiplatform' version '1.3.20-eap-52'
+    id 'kotlin-multiplatform' version '1.3.31'
 }
 
 repositories {
@@ -48,7 +48,7 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                api "com.github.andylamax:asoft-rx:1.0.1"
+                api "com.github.andylamax:asoft-rx:1.0.2"
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.1.1'
             }
         }
