--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 buildscript {
     ext {
         kotlin_version = "1.3.31"
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        coroutines_version = "1.1.1"
     }
 }
 
@@ -20,7 +18,7 @@ repositories {
 }
 
 group 'com.asofttz'
-version '0.0.1'
+version '1.0.0'
 
 apply plugin: 'maven-publish'
 
@@ -48,8 +46,8 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                api "com.github.andylamax:asoft-rx:1.0.2"
-                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.1.1'
+                api "com.github.andylamax:asoft-rx:1.0.3"
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
             }
         }
         commonTest {
@@ -61,7 +59,7 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
-                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
             }
         }
         jvmTest {
@@ -73,7 +71,7 @@ kotlin {
         jsMain {
             dependencies {
                 implementation kotlin('stdlib-js')
-                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-js:1.1.1'
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$coroutines_version"
             }
         }
         jsTest {
