--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.40'
+        kotlin_version = '1.3.41'
         serializatoin_version = "0.11.1"
         coroutines_version = "1.2.2"
+        rx_version = "2.0.2"
     }
 
     repositories {
@@ -18,7 +19,7 @@ buildscript {
 }
 
 plugins {
-    id 'kotlin-multiplatform' version '1.3.40'
+    id 'kotlin-multiplatform' version '1.3.41'
 }
 
 tasks.whenTaskAdded { task ->
@@ -28,11 +29,10 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '2.0.1'
+version '2.0.2'
 
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
-apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 28
@@ -77,13 +77,13 @@ kotlin {
         }
     }
 
-//    android() {
-//        compilations.all {
-//            tasks[compileKotlinTaskName].kotlinOptions {
-//                jvmTarget = "1.8"
-//            }
-//        }
-//    }
+    android() {
+        compilations.all {
+            tasks[compileKotlinTaskName].kotlinOptions {
+                jvmTarget = "1.8"
+            }
+        }
+    }
 
     js() {
         browser {
@@ -112,8 +112,7 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                api "com.github.andylamax:asoft-rx:2.0.2"
-                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
+                api "com.github.andylamax.asoft-rx:asoft-rx-metadata:$rx_version"
             }
         }
         commonTest {
@@ -125,10 +124,10 @@ kotlin {
         }
 
         jvmCommonMain {
-            dependsOn commonMain
             dependencies {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+                api "com.github.andylamax.asoft-rx:asoft-rx-jvm:$rx_version"
             }
         }
 
@@ -148,20 +147,21 @@ kotlin {
             dependsOn jvmMain
             dependsOn jvmCommonTest
         }
-//        androidMain {
-//            dependsOn jvmCommonMain
-//            dependencies {
-//                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-//            }
-//        }
-//        androidTest {
-//            dependsOn androidMain
-//            dependsOn jvmCommonTest
-//        }
+        androidMain {
+            dependsOn jvmCommonMain
+            dependencies {
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+            }
+        }
+        androidTest {
+            dependsOn androidMain
+            dependsOn jvmCommonTest
+        }
         jsMain {
             dependencies {
                 implementation kotlin('stdlib-js')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$coroutines_version"
+                api "com.github.andylamax.asoft-rx:asoft-rx-js:$rx_version"
             }
         }
         jsTest {
