--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.41'
-        serializatoin_version = "0.11.1"
+        serialization_version = "0.11.1"
         coroutines_version = "1.2.2"
         rx_version = "2.0.2"
     }
@@ -29,9 +29,10 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '2.1.0'
+version '2.2.0'
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlinx-serialization'
 apply plugin: 'maven-publish'
 
 android {
@@ -113,6 +114,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-common')
                 api "com.github.andylamax.asoft-rx:asoft-rx-metadata:$rx_version"
+                api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
             }
         }
         commonTest {
@@ -128,6 +130,7 @@ kotlin {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
                 api "com.github.andylamax.asoft-rx:asoft-rx-jvm:$rx_version"
+                api "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
         }
 
@@ -162,6 +165,7 @@ kotlin {
                 implementation kotlin('stdlib-js')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$coroutines_version"
                 api "com.github.andylamax.asoft-rx:asoft-rx-js:$rx_version"
+                api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-js:$serialization_version"
             }
         }
         jsTest {
