--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         coroutines_version = "1.3.0"
         rx_version = "2.2.0"
         test_version = "1.0.0"
+        platform_version = "2.0.0"
     }
 
     repositories {
@@ -30,7 +31,7 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '3.2.1'
+version '4.0.0'
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlinx-serialization'
@@ -115,6 +116,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-common')
                 api "com.github.andylamax.asoft-rx:asoft-rx-metadata:$rx_version"
+                api "com.github.andylamax.asoft-platform:asoft-platform-metadata:$platform_version"
                 api "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
             }
@@ -132,6 +134,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+                api "com.github.andylamax.asoft-platform:asoft-platform-jvm:$platform_version"
                 api "com.github.andylamax.asoft-rx:asoft-rx-jvm:$rx_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
@@ -150,6 +153,7 @@ kotlin {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
                 api "com.github.andylamax.asoft-rx:asoft-rx-android:$rx_version"
+                api "com.github.andylamax.asoft-platform:asoft-platform-android:$platform_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
         }
@@ -165,6 +169,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-js')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$coroutines_version"
+                api "com.github.andylamax.asoft-platform:asoft-platform-js:$platform_version"
                 api "com.github.andylamax.asoft-rx:asoft-rx-js:$rx_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-js:$serialization_version"
             }
