--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '4.0.0'
+version '5.0.0'
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlinx-serialization'
@@ -89,14 +89,14 @@ kotlin {
     }
 
     js() {
-        browser {
-            testTask {
-                useKarma {
-                    useChrome()
-                }
-            }
-        }
-        nodejs()
+//        browser {
+//            testTask {
+//                useKarma {
+//                    useChrome()
+//                }
+//            }
+//        }
+//        nodejs()
         compilations.all {
             tasks[compileKotlinTaskName].kotlinOptions {
                 kotlinOptions.metaInfo = true
