--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.50'
-        serialization_version = "0.12.0"
-        coroutines_version = "1.3.0"
-        rx_version = "5.0.0"
+        kotlin_version = '1.3.61'
+        serialization_version = "0.13.0"
+        coroutines_version = "1.3.3"
         test_version = "1.0.0"
         platform_version = "3.0.0"
+        android_build_tools_version = "3.3.2"
     }
 
     repositories {
@@ -14,15 +14,14 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' // Add this line
+        classpath "com.android.tools.build:gradle:$android_build_tools_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
 plugins {
-    id 'kotlin-multiplatform' version '1.3.50'
+    id 'kotlin-multiplatform' version '1.3.61'
 }
 
 tasks.whenTaskAdded { task ->
@@ -32,7 +31,7 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '13.0.0'
+version '14.0.0'
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlinx-serialization'
@@ -41,7 +40,7 @@ apply plugin: 'maven-publish'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 1
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -87,6 +86,8 @@ kotlin {
                 jvmTarget = "1.8"
             }
         }
+
+        publishLibraryVariants("release")
     }
 
     js() {
@@ -108,15 +109,10 @@ kotlin {
         }
     }
 
-    android {
-        publishLibraryVariants("release")
-    }
-
     sourceSets {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                api "com.github.andylamax.asoft-rx:asoft-rx-metadata:$rx_version"
                 api "com.github.andylamax.asoft-platform:asoft-platform-metadata:$platform_version"
                 api "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
@@ -127,7 +123,6 @@ kotlin {
                 implementation kotlin('test-common')
                 implementation kotlin('test-annotations-common')
                 implementation "com.github.andylamax.asoft-test:asoft-test-metadata:$test_version"
-                implementation "org.spekframework.spek2:spek-dsl-metadata:2.0.7"
             }
         }
 
@@ -136,7 +131,6 @@ kotlin {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
                 api "com.github.andylamax.asoft-platform:asoft-platform-jvm:$platform_version"
-                api "com.github.andylamax.asoft-rx:asoft-rx-jvm:$rx_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
         }
@@ -146,14 +140,12 @@ kotlin {
                 implementation kotlin('test')
                 implementation kotlin('test-junit')
                 implementation "com.github.andylamax.asoft-test:asoft-test-jvm:$test_version"
-                implementation "org.spekframework.spek2:spek-dsl-jvm:2.0.7"
             }
         }
         androidMain {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-                api "com.github.andylamax.asoft-rx:asoft-rx-android:$rx_version"
                 api "com.github.andylamax.asoft-platform:asoft-platform-android:$platform_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
             }
@@ -163,7 +155,6 @@ kotlin {
                 implementation kotlin('test')
                 implementation kotlin('test-junit')
                 implementation "com.github.andylamax.asoft-test:asoft-test-android:$test_version"
-                implementation "org.spekframework.spek2:spek-dsl-jvm:2.0.7"
             }
         }
         jsMain {
@@ -171,7 +162,6 @@ kotlin {
                 implementation kotlin('stdlib-js')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$coroutines_version"
                 api "com.github.andylamax.asoft-platform:asoft-platform-js:$platform_version"
-                api "com.github.andylamax.asoft-rx:asoft-rx-js:$rx_version"
                 api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-js:$serialization_version"
             }
         }
@@ -179,7 +169,6 @@ kotlin {
             dependencies {
                 implementation kotlin('test-js')
                 implementation "com.github.andylamax.asoft-test:asoft-test-js:$test_version"
-                implementation "org.spekframework.spek2:spek-dsl-js:2.0.7"
             }
         }
     }
