--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.61'
-        serialization_version = "0.13.0"
+        serialization_version = "0.14.0"
         coroutines_version = "1.3.3"
         test_version = "1.0.0"
         platform_version = "3.0.0"
@@ -31,7 +31,7 @@ tasks.whenTaskAdded { task ->
 }
 
 group 'tz.co.asoft'
-version '14.0.0'
+version '14.0.1'
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlinx-serialization'
@@ -40,15 +40,16 @@ apply plugin: 'maven-publish'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 1
+        minSdkVersion 9
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main {
+            manifest.srcFile 'src/androidMain/AndroidManifest.xml'
+            resources.srcDirs = ['src/androidMain/resources']
+        }
     }
 
     buildTypes {
