--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,7 @@ pluginManagement {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
+
+enableFeaturePreview("GRADLE_METADATA")
 rootProject.name = 'asoft-persist'
 
